Deleted "globals.js" file. "test" script was renamed to the "test:components". Fix typos in README.md file.

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "middlemarch-react",
   "scripts": {
-    "test": "nightwatch",
     "test:e2e": "nightwatch ./test/e2e",
+    "test:components": "nightwatch ./test/component",
     "start": "netlify dev",
     "vite:start": "vite",
     "vite:build": "vite build",
