--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.3.2",
-    "chromedriver": "103.0.0",
+    "chromedriver": "^103.0.0",
     "geckodriver": "^3.0.2",
     "netlify-cli": "^10.7.1",
     "nightwatch": "2.2.3-preview.1",
