--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -25,7 +25,7 @@ jobs:
       - run: sudo apt-get install xvfb
 
       - name: Run Nightwatch component tests
-        run: xvfb-run --auto-servernum npm test:components
+        run: xvfb-run --auto-servernum npm run test:components
 
       - name: Build and start application
         run: npm start &
@@ -34,5 +34,5 @@ jobs:
         run: sleep 30s
 
       - name: Run Nightwatch end-to-end tests
-        run: xvfb-run --auto-servernum npm test:e2e
+        run: xvfb-run --auto-servernum npm run test:e2e
 
